--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-spinners": "^0.13.2",
     "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
