--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.25",
     "framer-motion": "^6.3.16",
     "phosphor-react": "^1.4.1",
