--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spinners": "^0.13.2",
     "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
