--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.3.1",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-spinners": "^0.13.2",
     "react-toastify": "^9.0.5",
+    "react-tsparticles": "^2.3.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.1",
+    "tsparticles": "^2.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
